--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/add-educacion/add-educacion.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/add-educacion/add-educacion.component.html
@@ -1,74 +1,114 @@
-<div>
-    <div class="contenedor">
-        <div class="d-flex p-2 bd-highlight">
-            <div class="flex-shrink-0">
-                <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
-                    <div class="mb-3">
-                        <label class="form-label">
-                            <h1>Agregue un estudio mas</h1>
-                        </label>
+<div class="contenedor">
+    <div class="row bg-dark p-2 bg-opacity-10">
+        <div class="flex-shrink-0">
+            <form (ngSubmit)="onCreate()" novalidate #formEdu="ngForm">
+                <div class="mb-3">
+                    <label class="form-label">
+                        <h1>Agregue un estudio mas</h1>
+                    </label>
+                </div>
+                <div class="row">
+                    <div class="col-10 order-first">
+                        <div class="mb-3" class="form-group">
+                            <label>
+                                <h5>Institucion</h5>
+                            </label>
+                            <input type="text" class="form-control form-control-sm" id="idInstitucion"
+                                name="idInstitucion" autocomplete="off" [(ngModel)]="institucion"
+                                #idInstitucion="ngModel" required placeholder="Nombre de la institución">
+                            <div *ngIf="idInstitucion.invalid && (idInstitucion.dirty || idInstitucion.touched)"
+                                class="alert alert-danger">
+                                <div *ngIf="idInstitucion.errors['required']">
+                                    *El nombre de la institución es requerido!
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col-10 order-first">
-                            <div class="mb-3">
-                                <label for="Institución" class="form-label">
-                                    <h5>Institución</h5>
-                                </label>
-                                <input class="form-control form-control-sm" type="text" id="institucionAdd"
-                                    name="institucion" [(ngModel)]="institucion" required
-                                    placeholder="Nombre de la institucion" aria-label=".form-control-sm example">
-                            </div>
-                        </div>
-                        <div class="col-10 order-first">
-                            <div class="mb-3">
-                                <label for="formFileSm" class="form-label">
+                            <div class="mb-3" class="form-group">
+                                <label>
                                     <h5>Carrera/Curso</h5>
                                 </label>
-                                <input class="form-control form-control-sm" type="text" id="titulacionAdd"
-                                    name="titulacionAdd" [(ngModel)]="titulacion" required
-                                    placeholder="Nombre de la carrera o curso" aria-label=".form-control-sm example">
-                            </div>
-                        </div>
-                        <div class="col-10 order-first">
-                            <div class="mb-3">
-                                <label for="formFileSm" class="form-label">
-                                    <h5>Desde</h5>
-                                </label>
-                                <input class="form-control form-control-sm" type="text" id="inicio_eduAdd"
-                                    name="inicio_eduAdd" [(ngModel)]="inicio_edu" required placeholder="Inicio"
-                                    aria-label=".form-control-sm example">
-                            </div>
-
-                        </div>
-                        <div class="col-10 order-first">
-                            <div class="mb-3">
-                                <label for="formFileSm" class="form-label">
-                                    <h5>Hasta</h5>
-                                </label>
-                                <input class="form-control form-control-sm" type="text" id="fin_eduAdd"
-                                    name="fin_eduAdd" [(ngModel)]="fin_edu" required placeholder="Hasta"
-                                    aria-label=".form-control-sm example">
-                            </div>
-                        </div>
-                        <div class="col-10 order-first">
-                            <div class="mb-3">
-                                <label for="formFileSm" class="form-label">
-                                    <h5>Descripción</h5>
-                                </label>
-                                <textarea class="form-control form-control-sm" type="text" id="descripcion_eduAdd"
-                                    name="descripcion_eduAdd" [(ngModel)]="descripcion_edu" required
-                                    placeholder=" Descripcion carrera o curso" aria-label="With textarea"></textarea>
-                            </div>
-                        </div>
-                        <!--Boton de guardado-->
-                        <div class="col-10 order-first">
-                            <div class="mb-3 float-right d-flex justify-content-end">
-                                <button type="submit" class="btn btn-dark btn-sm">Agregar educacion</button>
+                                <input type="text" class="form-control form-control-sm" id="idTitulacion"
+                                    name="idTitulacion" autocomplete="off" [(ngModel)]="titulacion"
+                                    #idTitulacion="ngModel" required placeholder="Nombre de la carrera o curso">
+                                <div *ngIf="idTitulacion.invalid && (idTitulacion.dirty || idTitulacion.touched)"
+                                    class="alert alert-danger">
+                                    <div *ngIf="idTitulacion.errors['required']">
+                                        *El nombre de la carrera o curso es requerido!
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </form>
-            </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 order-first">
+                        <div class="mb-3" class="form-group">
+                            <label>
+                                <h5>Desde</h5>
+                            </label>
+                            <input type="text" class="form-control form-control-sm" id="idInicio_edu"
+                                name="idInicio_edu" autocomplete="off" [(ngModel)]="inicio_edu" #idInicio_edu="ngModel"
+                                required placeholder="Fecha/año de inicio de la carrera/curso">
+                            <div *ngIf="idInicio_edu.invalid && (idInicio_edu.dirty || idInicio_edu.touched)"
+                                class="alert alert-danger">
+                                <div *ngIf="idInicio_edu.errors['required']">
+                                    *La fecha/año de inicio es requerida!
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 order-first">
+                        <div class="mb-3" class="form-group">
+                            <label>
+                                <h5>Hasta</h5>
+                            </label>
+                            <input type="text" class="form-control form-control-sm" id="idFin_edu" name="idFin_edu"
+                                autocomplete="off" [(ngModel)]="fin_edu" #idFin_edu="ngModel" required
+                                placeholder="Año de finalización o en curso">
+                            <div *ngIf="idFin_edu.invalid && (idFin_edu.dirty || idFin_edu.touched)"
+                                class="alert alert-danger">
+                                <div *ngIf="idFin_edu.errors['required']">
+                                    *Año de finalización/en curso es requerida!
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-10 order-first">
+                        <div class="mb-3" class="form-group">
+                            <label>
+                                <h5>Descripción</h5>
+                            </label>
+                            <textarea class="form-control form-control-sm" type="text" id="idDescripcion_edu"
+                                name="idDescripcion_edu" aria-label="With textarea" autocomplete="off"
+                                [(ngModel)]="descripcion_edu" #idDescripcion_edu="ngModel" required
+                                placeholder="Descripcion de la experiencia">
+                               </textarea>
+                            <div *ngIf="idDescripcion_edu.invalid && (idDescripcion_edu.dirty || idDescripcion_edu.touched)"
+                                class="alert alert-danger">
+                                <div *ngIf="idDescripcion_edu.errors['required']">
+                                    *La descripcion de la carrera/curso es requerida!
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-10 order-first">
+                        <div class="mb-3 float-right d-flex justify-content-end">
+                            <button type="submit" class="btn btn-dark btn-sm" [disabled]="!formEdu.form.valid">Agregar
+                                experiencia</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </div>
