--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-acerca-de/edit-acerca-de.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-acerca-de/edit-acerca-de.component.html
@@ -1,16 +1,5 @@
-<!-- Para el input el avatar de usuario, para elegir entre 4 o 5 diferentes
-<label for="exampleDataList" class="form-label">Datalist example</label>
-<input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
-<datalist id="datalistOptions">
-  <option value="./assets/AvatarMaker.png">
-  <option value="New York">
-  <option value="Seattle">
-  <option value="Los Angeles">
-  <option value="Chicago">
-</datalist>
--->
 <div>
-  <div class="contenedor" *ngIf="persona">
+  <div class="contenedor">
     <div class="d-flex p-2 bd-highlight">
       <div class="flex-shrink-0">
         <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
@@ -20,15 +9,15 @@
               <h1></h1>
             </label>
           </div>
-          <!--Aqui va el formulario-->
           <div class="row">
             <div class="col-12 order-first">
               <div class="mb-3">
-                <label for="formFileSm" class="form-label">
-                  <h5>Foto perfil</h5>
+                <label for="url_foto" class="form-label">
+                  <h5>Imagen del perfil</h5>
                 </label>
                 <input type="text" class="form-control" list="datalistOptions" id="url_foto" name="url_foto"
-                  placeholder="url de la imagen de perfil" [(ngModel)]="persona.url_foto" required>
+                placeholder="Elija las opciones de imagenes"
+                [(ngModel)]="perso.url_foto" required>
                 <datalist id="datalistOptions">
                   <option value="./assets/AvatarMaker.png">
                   <option value="./assets/AvatarMaker2.png">
@@ -42,44 +31,44 @@
           <div class="row">
             <div class="col-12 order-first">
               <div class="mb-3">
-                <label for="formFileSm" class="form-label">
+                <label for="nombre" class="form-label">
                   <h5>Nombre</h5>
                 </label>
                 <input typer="texto" class="form-control form-control-sm" id="nombre" name="nombre"
-                  placeholder="Nombres" [(ngModel)]="persona.nombre" required>
+                  [(ngModel)]="perso.nombre" required>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-12 order-first">
               <div class="mb-3">
-                <label for="formFileSm" class="form-label">
+                <label for="apellido" class="form-label">
                   <h5>Apellido</h5>
                 </label>
                 <input class="form-control form-control-sm" type="text" id="apellido" name="apellido"
-                  placeholder="Apellido" [(ngModel)]="persona.apellido" required>
+                 [(ngModel)]="perso.apellido" required>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-12 order-first">
               <div class="mb-3">
-                <label for="formFileSm" class="form-label">
+                <label for="titulo" class="form-label">
                   <h5>Título</h5>
                 </label>
-                <input class="form-control form-control-sm" type="text" id="titulo" name="titulo" placeholder="Título"
-                  [(ngModel)]="persona.titulo" required>
+                <input class="form-control form-control-sm" type="text" id="titulo" name="titulo"
+                  [(ngModel)]="perso.titulo" required>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-12 order-first">
               <div class="mb-3">
-                <label for="formFileSm" class="form-label">
-                  <h5>Acerca de mi</h5>
+                <label for="acerca_de" class="form-label">
+                  <h5>Reseña sobre mi</h5>
                 </label>
                 <textarea class="form-control form-control-sm" type="text" id="acerca_de" name="acerca_de"
-                  placeholder="Acerca de mi" [(ngModel)]="persona.acerca_de" required></textarea>
+                  [(ngModel)]="perso.acerca_de" required></textarea>
               </div>
             </div>
           </div>
