--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-banner/edit-banner.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-banner/edit-banner.component.html
@@ -13,7 +13,7 @@
   <div class="contenedor">
     <div class="d-flex p-2 bd-highlight">
       <div class="flex-shrink-0">
-        <form>
+        <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
           <div class="mb-3">
             <label class="form-label">
               <h1>Edite el banner</h1>
@@ -26,7 +26,9 @@
                 <label for="formFileSm" class="form-label">
                   <h5>Imagen del banner</h5>
                 </label>
-                <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
+                <input class="form-control" list="datalistOptions" id="url_banner" name="url_banner"
+                placeholder="Elija las opciones de imágenes"
+                [(ngModel)]="bannerModelo.url_banner" required>
                 <datalist id="datalistOptions">
                   <option value="./assets/banner1.png">
                   <option value="./assets/banner2.png">
@@ -40,13 +42,10 @@
           <div class="modal-footer">
             <div class="row d-flex">
               <div class="col-12 d-flex justify-content-end">
-                <div class="mb-3 float-right">
-                  <button type="button" class="btn btn-dark btn-sm">Cancelar</button>
-                </div>
-                &nbsp;
-                <div class="mb-3 float-right">
-                  <button type="button" class="btn btn-dark btn-sm">Guardar</button>
-                </div>
+                <div class="mb-3">
+                  <br>
+                  <button type="submit" class="btn btn-dark btn-sm">Editar banner</button>
+              </div>
               </div>
             </div>
           </div>
