--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-educacion/edit-educacion.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-educacion/edit-educacion.component.html
@@ -4,7 +4,7 @@
             <div class="flex-shrink-0">
                 <div class="row">
                     <div class="mb-3">
-                        <form>
+                        <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
                             <label for="exampleInputEmail1" class="form-label">
                                 <h1>Edite el estudio</h1>
                             </label>
@@ -13,9 +13,8 @@
                                     <label for="Institución" class="form-label">
                                         <h5>Institución</h5>
                                     </label>
-                                    <input class="form-control form-control-sm" type="text" id="institucion"
-                                        name="institucion" required placeholder="Nombre de la institucion"
-                                        aria-label=".form-control-sm example">
+                                    <input class="form-control form-control-sm" type="text" id="institucion" name="institucion" 
+                                    [(ngModel)]="eduModelo.institucion" required>
                                 </div>
                             </div>
                             <div class="col-10 order-first">
@@ -24,8 +23,8 @@
                                         <h5>Carrera/Curso</h5>
                                     </label>
                                     <input class="form-control form-control-sm" type="text" id="titulacion"
-                                        name="titulacionAdd" required placeholder="Nombre de la carrera o curso"
-                                        aria-label=".form-control-sm example">
+                                        name="titulacion"
+                                        [(ngModel)]="eduModelo.titulacion" required>
                                 </div>
                             </div>
                             <div class="col-10 order-first">
@@ -33,9 +32,8 @@
                                     <label for="formFileSm" class="form-label">
                                         <h5>Desde</h5>
                                     </label>
-                                    <input class="form-control form-control-sm" type="text" id="inicio_eduAdd"
-                                        name="inicio_eduAdd" required placeholder="Inicio"
-                                        aria-label=".form-control-sm example">
+                                    <input class="form-control form-control-sm" type="text" id="inicio_edu" name="inicio_edu"
+                                        [(ngModel)]="eduModelo.inicio_edu" required>
                                 </div>
 
                             </div>
@@ -44,9 +42,9 @@
                                     <label for="formFileSm" class="form-label">
                                         <h5>Hasta</h5>
                                     </label>
-                                    <input class="form-control form-control-sm" type="text" id="fin_eduAdd"
-                                        name="fin_eduAdd" required placeholder="Hasta"
-                                        aria-label=".form-control-sm example">
+                                    <input class="form-control form-control-sm" type="text" id="fin_edu"
+                                        name="fin_edu"
+                                        [(ngModel)]="eduModelo.fin_edu" required>
                                 </div>
                             </div>
                             <div class="col-10 order-first">
@@ -54,15 +52,17 @@
                                     <label for="formFileSm" class="form-label">
                                         <h5>Descripción</h5>
                                     </label>
-                                    <textarea class="form-control form-control-sm" type="text" id="descripcion_eduAdd"
-                                        name="descripcion_eduAdd" required placeholder=" Descripcion carrera o curso"
-                                        aria-label="With textarea"></textarea>
+                                    <textarea class="form-control form-control-sm" type="text" id="descripcion_edu"
+                                        name="descripcion_edu"
+                                        [(ngModel)]="eduModelo.descripcion_edu" required></textarea>
                                 </div>
                             </div>
-                            <!--Boton de guardado-->
-                            <div class="col-10 order-first">
-                                <div class="mb-3 float-right">
-                                    <button type="button" class="btn btn-dark btn-sm">Editar educacion</button>
+                            <div class="row">
+                                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                                    <div class="mb-3">
+                                        <br>
+                                        <button type="submit" class="btn btn-dark btn-sm">Editar educación</button>
+                                    </div>
                                 </div>
                             </div>
                         </form>
