--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-experiencia/edit-experiencia.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/edit-experiencia/edit-experiencia.component.html
@@ -2,7 +2,7 @@
     <div class="contenedor">
         <div class="d-flex p-2 bd-highlight">
             <div class="flex-shrink-0">
-                <form>
+                <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
                     <div class="mb-3">
                         <label class="form-label">
                             <h1>Edite la experiencia</h1>
@@ -15,8 +15,8 @@
                                 <label for="formFileSm" class="form-label">
                                     <h5>Empresa</h5>
                                 </label>
-                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
-                                    aria-label=".form-control-sm example">
+                                <input class="form-control form-control-sm" type="text" id="empresa" name="empresa"
+                                [(ngModel)]="expeModelo.empresa" required>
                             </div>
                         </div>
                     </div>
@@ -26,8 +26,8 @@
                                 <label for="formFileSm" class="form-label">
                                     <h5>Puesto</h5>
                                 </label>
-                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
-                                    aria-label=".form-control-sm example">
+                                <input class="form-control form-control-sm" type="text" id="puesto" name="puesto"
+                                [(ngModel)]="expeModelo.puesto" required>
                             </div>
                         </div>
                     </div>
@@ -37,8 +37,8 @@
                                 <label for="formFileSm" class="form-label">
                                     <h5>Desde</h5>
                                 </label>
-                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
-                                    aria-label=".form-control-sm example">
+                                <input class="form-control form-control-sm" type="text" id="inicio_exp" name="inicio_exp"
+                                [(ngModel)]="expeModelo.inicio_exp" required>
                             </div>
                         </div>
                     </div>
@@ -48,19 +48,8 @@
                                 <label for="formFileSm" class="form-label">
                                     <h5>Hasta</h5>
                                 </label>
-                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
-                                    aria-label=".form-control-sm example">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-12 order-first">
-                            <div class="mb-3">
-                                <label for="formFileSm" class="form-label">
-                                    <h5>Estado actual</h5>
-                                </label>
-                                <input class="form-control form-control-sm" type="text" placeholder=".form-control-sm"
-                                    aria-label=".form-control-sm example">
+                                <input class="form-control form-control-sm" type="text" id="fin_exp" name="fin_exp"
+                                [(ngModel)]="expeModelo.fin_exp" required>
                             </div>
                         </div>
                     </div>
@@ -70,22 +59,16 @@
                                 <label for="formFileSm" class="form-label">
                                     <h5>Descripción</h5>
                                 </label>
-                                <textarea class="form-control form-control-sm" type="text"
-                                    placeholder=".form-control-sm" aria-label="With textarea"></textarea>
+                                <textarea class="form-control form-control-sm" type="text" id="descripcion_exp" name="descripcion_exp"
+                                [(ngModel)]="expeModelo.descripcion_exp" required></textarea>
                             </div>
                         </div>
                     </div>
-                    <!--Boton de guardado-->
-                    <div class="modal-footer">
-                        <div class="row d-flex">
-                            <div class="col-12 d-flex justify-content-end">
-                                <div class="mb-3 float-right">
-                                    <button type="button" class="btn btn-dark btn-sm">Cancelar</button>
-                                </div>
-                                &nbsp;
-                                <div class="mb-3 float-right">
-                                    <button type="button" class="btn btn-dark btn-sm">Guardar</button>
-                                </div>
+                    <div class="row d-flex">
+                         <div class="col-12 d-flex justify-content-end">
+                             <div class="mb-3 float-right">
+                                <br>
+                                <button type="submit" class="btn btn-dark btn-sm">Editar Experiencia</button>
                             </div>
                         </div>
                     </div>
