--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/login/login.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/login/login.component.html
@@ -13,24 +13,28 @@
               </div>
               <div class="form-outline mb-4">
                 <label class="form-label" for="form3Example3">Email&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                <input type="email" id="form3Example3" formControlName="email" [class.border-danger]="EmailValid">
+                <input type="email" id="form3Example3" aria-label=".form-control-sm example" formControlName="email" [class.border-danger]="EmailValid">
                 <div *ngIf="Email?.errors  && Email?.touched">
-                  <p *ngIf="Email?.hasError('required')" class="error">
-                    El email es requerido.
+                  <p *ngIf="Email?.hasError('required')" class="error text-danger badge-danger my-2 py-2">
+                    *El email es requerido.
                   </p>
-                  <p *ngIf="Email?.hasError('email')" class="error">
-                    El formato del email debe ser válido.
+                  <p *ngIf="Email?.hasError('email')" class="error text-danger badge-danger my-2 py-2">
+                    *El formato del email debe ser válido.
                   </p>
                 </div>
               </div>
               <div class="form-outline mb-4">
                 <label class="form-label"
                   for="exampleInputPassword1">Contraseña&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
-                <input type="password" id="form3Example4" formControlName="password"
+                <input type="password" id="form3Example4" aria-label=".form-control-sm example" formControlName="password"
                   [class.border-danger]="PasswordValid">
                 <div *ngIf="Password?.errors  && Password?.touched">
-                  <p *ngIf="Password?.hasError('required')" class="error">
-                    la contraseña es requerida.
+                  <p *ngIf="Password?.hasError('required')" class="error text-danger badge-danger my-2 py-2">
+                    *La contraseña es requerida.
+                  </p>
+                  <!--<div *ngIf="Password?.hasError('minLength')" class="error">-->
+                  <p *ngIf="Password.errors?.minlength" class="error text-danger badge-danger my-2 py-2">  
+                    *La contraseña debe tener 8 carácteres como mínimo. 
                   </p>
                 </div>
               </div>
