--- a/PorfolioWebAP_Carolina_Salanova/src/app/componentes/navbar/navbar.component.html
+++ b/PorfolioWebAP_Carolina_Salanova/src/app/componentes/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg bg-dark py-0">
   <div class="container-fluid">
-    <a class="navbar-brand" href=""><img class="nav-menu-link-icono" src="./assets/APLogo-20-20.png"></a>
+    <a class="nav-item" href="https://www.argentina.gob.ar/economia/conocimiento/argentina-programa"><img class="nav-menu-link-icono" src="./assets/APLogo-20-20.png"></a>
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
     </ul>
     <ul class="navbar-nav  justify-content-end">
       <li class="nav-item">
-        <a href=""><img class="nav-menu-link-img" src="./assets/github.png"></a>
+        <a href="https://github.com/carolinaS123/"><img class="nav-menu-link-img" src="./assets/github.png"></a>
       </li>
       <li class="nav-item">
         <a href=""><img class="nav-menu-link-img" src="./assets/linkedin.png"></a>
